{Nitin} assignment complete 24.11.2020

--- a/19.11.2020/index.html
+++ b/19.11.2020/index.html
@@ -146,6 +146,7 @@
                 <div class="content">
                     <div class="card-1">
                         <h3>Box one</h3>
+                        <a href="" type="" attrs></a>
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab suscipit mollitia illum quam, aspernatur odit pariatur, itaque distinctio veritatis voluptatibus sed non at, molestiae quo ex nostrum. Laudantium, a itaque.</p>
                     </div>
                     <div class="card-2">
